<resources>
    <string name="app_name">智慧办公</string>

    <string name="login_input_phone">请输入手机号</string>
    <string name="login_input_password">请输入登录密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_phone_verify">短信验证码登录</string>
    <string name="login_phone_password">用户名密码登录</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="main_title_home">首页</string>
    <string name="main_title_open">开门</string>
    <string name="main_title_mine">我的</string>


    <string name="mine_edit_user_info"><u>查看/编辑个人资料</u></string>
    <string name="mine_company">我的企业</string>
    <string name="mine_action">我的活动</string>
    <string name="mine_visitor">我的访客</string>
    <string name="mine_meeting">我的会议</string>
    <string name="mine_settings">设置</string>

    <string name="environmental_control">环境控制</string>
    <string name="meeting_schedule">会议预定</string>
    <string name="attendance">智慧考勤</string>
    <string name="repair">报事报修</string>
    <string name="repair_record">报修记录</string>
    <string name="repair_type">报修类型</string>
    <string name="air_quality">空气质量</string>
    <string name="share_work">共享工作</string>
    <string name="visitor">访客邀请</string>
    <string name="more">更多</string>

    <string name="action_recommend">活动推荐</string>
    <string name="company_advise">企业资讯</string>
    <string name="message_notice">消息通知</string>

    <string-array name="environmental_control_items">
        <item>灯光</item>
        <item>窗帘</item>
        <item>空调</item>
        <item>新风</item>
    </string-array>

    <string-array name="message_items">
        <item>公告</item>
        <item>活动</item>
        <item>物业</item>
    </string-array>

    <string-array name="month_items">
        <item>1月 </item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto">自动</string>
    <string name="refrigeration">制冷</string>
    <string name="hot">制热</string>
    <string name="water">除湿</string>
    <string name="wind">送风</string>
    <string name="low_wind">低风</string>
    <string name="mid_wind">中风</string>
    <string name="high_wind">强风</string>

    <string name="auto_wind">自动风</string>
    <string name="high_wind_two">高风</string>
    <string name="all_read">全部已读</string>
    <string name="all_feature">全部应用</string>
    <string name="my_feature">我的应用</string>
    <string name="edit">编辑</string>

    <string name="attendance_record">考勤记录</string>
    <string name="attendance_notice">下班后显示当天下班打卡记录</string>
    <string name="attendance_out_area">外勤签到</string>

    <string name="visitor_name">访客姓名</string>
    <string name="input_visitor_name">请输入访客姓名</string>
    <string name="contact_phone">联系电话</string>
    <string name="visit_cause">来访事由</string>
    <string name="input_visit_cause">请输入来访事由</string>
    <string name="visit_time">到访时间</string>
    <string name="visit_car">访客车牌</string>
    <string name="input_visit_car">请输入访客车牌</string>
    <string name="submit_apply">提交申请</string>
    <string name="visit_record">邀请记录</string>
    <string name="add_company">加入公司</string>
    <string name="select_office_area">选择办公地点</string>

    <string name="phone_number">手机号</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="verify_code">验证码</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="input_new_password">8-16位字符数字组成</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="confirm_input_new_password">请再次输入新密码</string>
    <string name="register">注册</string>
    <string name="register_agree">注册即代表同意</string>
    <string name="register_agreement">《航天广信智慧办公协议》</string>
    <string name="register_account">注册账号</string>
    <string name="modify">修改</string>

    <string name="forget_password">忘记密码</string>
    <string name="open_door">开门</string>
    <string name="meeting_time">会议时间</string>
    <string name="mine_schedule">我的预订</string>
    <string name="mine_schedule_detail">预订详情</string>
    <string name="head_image">头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="bind_phone">绑定手机</string>
    <string name="identification_verify">身份认证</string>
    <string name="my_info">我的资料</string>
    <string name="modify_password">修改密码</string>
    <string name="input_name">请输入姓名</string>
    <string name="save">保存</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="current_phone">当前手机号</string>
    <string name="new_phone">新手机</string>
    <string name="input_new_phone">输入新的手机号</string>
    <string name="modify_phone">修改手机号</string>
    <string name="real_name">真实姓名</string>
    <string name="verify_card">证件号码</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="input_identification_number">请输入身份证号码</string>
    <string name="apply_company">你还未加入任何一家公司，\n请加入您所属于的公司。</string>
    <string name="place">地点</string>

    <string name="input_contact_phone">请输入联系电话</string>
    <string name="type">类型</string>
    <string name="content">内容</string>
    <string name="input_content">请输入内容......</string>
    <string name="company_name">企业名称</string>
    <string name="employee_name">员工姓名</string>

    <string name="employee_card">工牌/名片</string>
    <string name="phone_no">电话号码</string>
    <string name="action_detail">活动详情</string>
    <string name="message_not_disturb">消息免打扰</string>
    <string name="clear_cache">清空缓存</string>
    <string name="suggestion">意见反馈</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="tip">启用后，将不会收到来自\"智慧办公\"的任何通知消息</string>
    <string name="input_suggestion">输入你想说的话......</string>
    <string name="confirm_submit">确认提交</string>
    <string name="open">打开</string>
    <string name="pause">暂停</string>
    <string name="close">关闭</string>
    <string name="input_nick_name">请输入昵称</string>

    <string name="name">姓名</string>
    <string name="verified">已认证</string>
    <string name="cleared_cache">已清空缓存</string>
    <string name="employee_information">身份信息</string>
    <string name="apply_action">我要报名</string>
    <string name="cancel_action">取消报名</string>
    <string name="right">\@版权所有 航天科工广信技术有限公司</string>
    <string name="just_experience">立即体验</string>

    <string name="password_input">0123456789zxcvbnmasdfghjklqwertyuiopZXCVBNMASDFGHJKLQWERTYUIOP</string>
    <string name="phone_input">0123456789</string>
    <string name="account_manage">账号管理</string>
    <string name="account_unregister">账号注销</string>
    <string name="confirm_unregister">确认注销</string>
    <string name="input_address">请输入地址</string>
    <string name="action">活动</string>


</resources>
