<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".activity.ui.home.HomeFragment">

    <com.bigkoo.convenientbanner.ConvenientBanner
        android:id="@+id/headBanner"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        app:autoTurningTime="@integer/banner_display_time"
        app:canLoop="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/id_icon_one_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingTop="@dimen/padding_style_two"
        android:paddingBottom="@dimen/padding_style_two"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headBanner">

        <TextView
            android:id="@+id/id_environmental_control_text_view"
            style="@style/iconStyle"
            android:drawableTop="@drawable/ic_environmental_control"
            android:text="@string/environmental_control" />

        <TextView
            android:id="@+id/id_meeting_schedule_text_view"
            style="@style/iconStyle"
            android:drawableTop="@drawable/ic_meeting_schedule"
            android:text="@string/meeting_schedule" />

        <TextView
            android:id="@+id/id_attendance_text_view"
            style="@style/iconStyle"
            android:drawableTop="@drawable/ic_attendance"
            android:text="@string/attendance" />

        <TextView
            android:id="@+id/id_repair_text_view"
            style="@style/iconStyle"
            android:drawableTop="@drawable/ic_repair"
            android:text="@string/repair" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_icon_two_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/padding_style_two"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_icon_one_layout">

        <TextView
            android:id="@+id/id_air_quality_text_view"
            style="@style/iconStyle"
            android:drawableTop="@drawable/ic_air_quality"
            android:text="@string/air_quality" />

        <TextView
            android:id="@+id/id_share_work_text_view"
            style="@style/iconStyle"
            android:drawableTop="@drawable/ic_share_work"
            android:text="@string/share_work" />

        <TextView
            android:id="@+id/id_visitor_text_view"
            style="@style/iconStyle"
            android:drawableTop="@drawable/ic_visitor"
            android:text="@string/visitor" />

        <TextView
            android:id="@+id/id_more_text_view"
            style="@style/iconStyle"
            android:drawableTop="@drawable/ic_more_ic"
            android:text="@string/more" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
