<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.login.password.ForgetPasswordFragment">

    <include
        android:id="@+id/title"
        layout="@layout/layout_common_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height_style"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_0"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/background_style_six"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <RelativeLayout
        android:id="@+id/realNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/margin_style_two"
        android:paddingRight="@dimen/margin_style_two"
        app:layout_constraintTop_toBottomOf="@id/line_0">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_item_height_style"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textColor="@color/font_color_style_six"
            android:textSize="@dimen/font_size_style_one" />

        <EditText
            android:id="@+id/visitorName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height_style"
            android:layout_marginLeft="100dp"
            android:background="@android:color/white"
            android:hint="@string/input_phone_number" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/background_style_six"
        app:layout_constraintTop_toBottomOf="@id/realNameLayout" />

    <RelativeLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/margin_style_two"
        android:paddingRight="@dimen/margin_style_two"
        app:layout_constraintTop_toBottomOf="@id/line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_item_height_style"
            android:gravity="center_vertical"
            android:text="@string/verify_code"
            android:textColor="@color/font_color_style_six"
            android:textSize="@dimen/font_size_style_one" />


        <TextView
            android:id="@+id/getVerifyCode"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/get_verify_code" />

        <EditText
            android:id="@+id/verifyCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height_style"
            android:layout_marginLeft="100dp"
            android:layout_toLeftOf="@id/getVerifyCode"
            android:background="@android:color/white"
            android:hint="@string/input_verify_code" />

    </RelativeLayout>

    <View
        android:id="@+id/lineTwo"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/background_style_six"
        app:layout_constraintTop_toBottomOf="@id/phoneLayout" />

    <RelativeLayout
        android:id="@+id/causeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/margin_style_two"
        android:paddingRight="@dimen/margin_style_two"
        app:layout_constraintTop_toBottomOf="@id/lineTwo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_item_height_style"
            android:gravity="center_vertical"
            android:text="@string/new_password"
            android:textColor="@color/font_color_style_six"
            android:textSize="@dimen/font_size_style_one" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height_style"
            android:layout_marginLeft="100dp"
            android:background="@android:color/white"
            android:hint="@string/input_new_password" />
    </RelativeLayout>

    <View
        android:id="@+id/lineThree"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/background_style_six"
        app:layout_constraintTop_toBottomOf="@id/causeLayout" />


    <RelativeLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/margin_style_two"
        android:paddingRight="@dimen/margin_style_two"
        app:layout_constraintTop_toBottomOf="@id/lineThree">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/list_item_height_style"
            android:gravity="center_vertical"
            android:text="@string/confirm_new_password"
            android:textColor="@color/font_color_style_six"
            android:textSize="@dimen/font_size_style_one" />

        <EditText
            android:id="@+id/confirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height_style"
            android:layout_marginLeft="100dp"
            android:background="@android:color/white"
            android:hint="@string/confirm_input_new_password" />
    </RelativeLayout>

    <View
        android:id="@+id/lineFour"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/background_style_six"
        app:layout_constraintTop_toBottomOf="@id/timeLayout" />


    <Button
        android:id="@+id/register"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/modify"
        app:layout_constraintTop_toBottomOf="@id/lineFour" />


</androidx.constraintlayout.widget.ConstraintLayout>