<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RadioGroup
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:checkedButton="@id/id_tab_home"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/id_tab_home"
                style="@style/bottomTabTitle"
                android:drawableTop="@drawable/selector_home_radio_button_state"
                android:text="@string/main_title_home" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/id_tab_open"
                style="@style/bottomTabTitle"
                android:drawableTop="@mipmap/ic_main_open_ic"
                android:text="@string/main_title_open" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/id_tab_mine"
                style="@style/bottomTabTitle"
                android:drawableTop="@drawable/selector_mine_radio_button_state"
                android:text="@string/main_title_mine" />
        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/nav_view"
            android:background="@color/background_style_four" />


        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/divider"
            app:defaultNavHost="false"
            app:navGraph="@navigation/mobile_navigation" />

    </RelativeLayout>
</layout>